src/App.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@700&display=swap');

h1 {
  font-family: 'Cormorant Upright', serif;
}

.header {
  width: 100%;
  height: 30em;
  display: block;
  position: relative;
  margin: 0 auto;
}
.title h1 {
  text-align: center;
  padding-top: 2em;
  font-size: 4em;
  color: black;
}

.header::after {
  content: '';
  background-image: url(./Pictures/coffeepictures.jpg);
  background-position: center;
  background-size: cover;
  opacity: 0.65;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

.serviceList {
  display: flex;
  justify-content: center;
  margin-bottom: auto;
  font-size: 15pt;
  font-family: 'Cormorant Upright', serif;
  position: relative;
  top: 210px;
  color: black;
}

.motto {
  text-align: center;
  padding: 3em 0
}

.headerCell {
  padding: 2em 0;
}

.serviceRow {
  margin: 3em 0
}

img {
  border: 1px solid black;
  border-radius: 1em;
}

/*Screen Size Functions*/

@media (min-width: 800px) {
  /* Horizontal list */
  .serviceList ul li {
    display: inline-block;
  }
  .serviceList ul li:before {
    content: '\00a0\2022\00a0\00a0';
    color: #999;
    color: black;
    font-size: 11px;
  }
  .serviceList ul li:first-child:before {
    content: '';
  }
}

/* Screen size changes */
@media (max-width: 800px) {
  .title h1 {
    font-size: 3em;
    padding-top: 1em;
  }

}

